<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="48dp"
    android:paddingTop="100dp"
    android:paddingRight="48dp"
    android:paddingBottom="100dp"
    android:background="@color/colorLogin2"
    tools:context="com.example.moviles.midtermprojectandroid.LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/education" />

        <EditText
            android:id="@+id/usernameEmail"
            style="@style/editText"
            android:hint="@string/user"
            android:inputType="textEmailAddress|textPersonName" />

        <EditText
            android:id="@+id/passwordLogIn"
            style="@style/editText"
            android:hint="@string/pwd"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/log_in"
            style="@style/button_log_in"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/sign_up"
            android:text="@string/sign_up"
            style="@style/button_sign_up"/>

        <Button
            android:id="@+id/textView"
            android:text="@string/forgot_pwd"
            android:visibility="gone"
            style="@style/button_forgot_pwd"/>

    </LinearLayout>

</RelativeLayout>
